--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,8 +1,26 @@
-name: GitHub Actions Demo
-run-name: ${{ github.actor }} is testing out GitHub Actions 🚀
-on: [push]
+name: Broserstack automation test
+run-name: Executed by ${{ github.actor }} 🚀
+on:
+    workflow_dispatch:
+      inputs:
+        os:
+          description: 'Operating system to run the job on'
+          required: true
+          type: choice
+          options:
+            - Android
+            - iOS
+        environment:
+          description: 'Environment to run the job on'
+          required: true
+          type: choice
+          options:
+            - DEV
+            - QA
+            - PROD
 jobs:
-  Explore-GitHub-Actions:
+  Browser-Stack-Execution:
+    environment: DEV
     runs-on: ubuntu-latest
     steps:
       - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
@@ -12,7 +30,14 @@ jobs:
         uses: actions/checkout@v4
       - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
       - run: echo "🖥️ The workflow is now ready to test your code on the runner."
-      - name: List files in the repository
-        run: |
-          ls ${{ github.workspace }}
-      - run: echo "🍏 This job's status is ${{ job.status }}."
+      - name: Setup NodeJS 🚦
+        uses: actions/setup-node@v2
+        with:
+          node-version: '20'
+      - name: Project Setup
+        run: npm install
+      - name: Print a enviroment variable value from github  
+        run: echo "The value of the variable is: ${{variables.VEM_DO_GITHUB_ENVIROMENT_VARIABLES}}"
+      - name: Status Job
+        run: echo "🍏 This job's status is ${{ job.status }}."    
+
